--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.0.11",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^16.2.0"
     },
     "dependencies": {
-        "vue-renderless-carousel": "^1.3.1"
+        "bootstrap": "^5.0.1",
+        "bootstrap-vue": "^2.21.2",
+        "vue": "^3.0.11",
+        "vue-renderless-carousel": "^1.3.1",
+        "vue-router": "^4.0.8"
     }
 }
