--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
+        "node-sass": "^6.0.0",
         "postcss": "^8.1.14",
+        "sass-loader": "^11.1.1",
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
