--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "bootstrap": "^5.0.1",
         "bootstrap-vue": "^2.21.2",
+        "line-awesome": "^1.3.0",
         "vue": "^3.0.11",
         "vue-renderless-carousel": "^1.3.1",
         "vue-router": "^4.0.8"
