--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
         "bootstrap": "^5.0.1",
         "bootstrap-vue": "^2.21.2",
         "line-awesome": "^1.3.0",
+        "maska": "^1.4.2",
+        "v-mask": "^2.2.4",
         "vue": "^3.0.11",
+        "vue-masked-input": "^0.5.2",
         "vue-renderless-carousel": "^1.3.1",
         "vue-router": "^4.0.8"
     }
