--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
         "v-mask": "^2.2.4",
         "vue": "^3.0.11",
         "vue-masked-input": "^0.5.2",
+        "vue-reactive-localstorage": "github:HAlex/vue-reactive-localstorage",
         "vue-renderless-carousel": "^1.3.1",
-        "vue-router": "^4.0.8"
+        "vue-router": "^4.0.8",
+        "vue3-datepicker": "^0.2.4",
+        "vuejs-datepicker": "^1.6.2"
     }
 }
