--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
+        "@kyvg/vue3-notification": "^2.3.3",
         "bootstrap": "^5.0.1",
         "bootstrap-vue": "^2.21.2",
         "line-awesome": "^1.3.0",
@@ -27,6 +28,7 @@
         "v-mask": "^2.2.4",
         "vue": "^3.0.11",
         "vue-masked-input": "^0.5.2",
+        "vue-notification": "^1.3.20",
         "vue-reactive-localstorage": "github:HAlex/vue-reactive-localstorage",
         "vue-renderless-carousel": "^1.3.1",
         "vue-router": "^4.0.8",
