--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "maska": "^1.4.2",
         "v-mask": "^2.2.4",
         "vue": "^3.0.11",
+        "vue-easy-lightbox": "^1.2.1",
         "vue-masked-input": "^0.5.2",
         "vue-notification": "^1.3.20",
         "vue-reactive-localstorage": "github:HAlex/vue-reactive-localstorage",
