--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "@kyvg/vue3-notification": "^2.3.3",
         "bootstrap": "^5.0.1",
         "bootstrap-vue": "^2.21.2",
+        "laravel-echo": "^1.11.0",
         "line-awesome": "^1.3.0",
         "maska": "^1.4.2",
+        "pusher-js": "^7.0.3",
         "v-mask": "^2.2.4",
         "vue": "^3.0.11",
         "vue-easy-lightbox": "^1.2.1",
