--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
         "@kyvg/vue3-notification": "^2.3.3",
         "bootstrap": "^5.0.1",
         "bootstrap-vue": "^2.21.2",
+        "dotenv": "^8.6.0",
+        "express": "^4.17.1",
+        "ioredis": "^4.27.6",
         "laravel-echo": "^1.11.0",
         "line-awesome": "^1.3.0",
         "maska": "^1.4.2",
         "pusher-js": "^7.0.3",
+        "redis-server": "^1.2.2",
+        "socket.io": "^4.1.3",
+        "socket.io-client": "^4.1.3",
         "v-mask": "^2.2.4",
         "vue": "^3.0.11",
         "vue-easy-lightbox": "^1.2.1",
