--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "predis/predis": "^1.1",
-        "pusher/pusher-php-server": "^7.0"
+        "pusher/pusher-php-server": "^7.0",
+        "telegram-bot/api": "^2.3"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
