--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "laravel-echo": "^1.11.0",
         "line-awesome": "^1.3.0",
         "maska": "^1.4.2",
+        "mdbootstrap": "^4.20.0",
         "pusher-js": "^7.0.3",
         "redis-server": "^1.2.2",
         "socket.io": "^4.1.3",
