--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "laravel/framework": "^8.12",
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "~1",
+        "league/flysystem-cached-adapter": "~1.0",
+        "league/flysystem-sftp": "~1.0",
         "pda/pheanstalk": "~4.0",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^7.0",
