--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,6 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "aws/aws-sdk-php": "~3.0",
-        "aws/aws-sdk-php-laravel": "^3.6",
-        "backpack/crud": "4.1.*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,19 +13,14 @@
         "laravel/framework": "^8.12",
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-cached-adapter": "~1.0",
-        "league/flysystem-sftp": "~1.0",
-        "pda/pheanstalk": "~4.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "predis/predis": "^1.1",
-        "pusher/pusher-php-server": "^7.0",
-        "telegram-bot/api": "^2.3"
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
-        "laracasts/generators": "^2.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
@@ -50,6 +42,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
